--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<title>Reshma's Portfolio</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Mono">
+		<link rel="stylesheet" href="https://use.typekit.net/adj1wky.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
