Use bee favicon

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,10 @@
 	<head>
 		<title>Reshma's Portfolio</title>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/bee-32.230318.webp" sizes="32x32" type="image/webp">
+		<link rel="icon" href="%sveltekit.assets%/bee-16.230318.webp" sizes="16x16" type="image/webp">
+		<link rel="icon" href="%sveltekit.assets%/bee-32.230318.png" sizes="32x32" type="image/png">
+		<link rel="icon" href="%sveltekit.assets%/bee-16.230318.png" sizes="16x16" type="image/png">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Mono">
 		<link rel="stylesheet" href="https://use.typekit.net/adj1wky.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
