change font to Work Sans

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,9 @@
 		<link rel="icon" href="%sveltekit.assets%/bee-16.230318.webp" sizes="16x16" type="image/webp">
 		<link rel="icon" href="%sveltekit.assets%/bee-32.230318.png" sizes="32x32" type="image/png">
 		<link rel="icon" href="%sveltekit.assets%/bee-16.230318.png" sizes="16x16" type="image/png">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Mono">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap">
 		<link rel="stylesheet" href="https://use.typekit.net/adj1wky.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
