--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Reshma's Portfolio</title>
+    <title>Reshma Zachariah</title>
     <meta charset="utf-8" />
     <link
       rel="icon"
